# glossa-dsl

./: .gitignore  Cargo.toml
.cargo/: config.toml
docs/: Readme.md
examples/: toml.rs  unread.rs
src/: error.rs  lib.rs  parsers.rs  part.rs  resolver.rs  selector.rs  template.rs
src/parsers/: branch.rs  context.rs  process_tmpl.rs
src/resolver/: bin_code.rs  bin_code_nostd.rs  from_slice.rs  lookup_value.rs  ordered_map.rs  serialize.rs  std_impl.rs
tests/: doc.rs  parse_braces.rs  serde.rs  slice.rs  tmpl_braces.rs  toml.rs  unicode.rs
tests/old/: deprecated.rs
