[package]
name = "tmpl-resolver"
version = "0.0.8"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Moe <m@tmoe.me>"]
readme = "docs/Readme.md"
exclude = ["/rust-toolchain.toml"]
repository = "https://github.com/2moe/tmpl-resolver"
keywords = ["serde", "config"]
categories = ["encoding", "parser-implementations", "parsing", "config"]
description = "A lightweight template resolution engine with conditional logic support"

[features]
default = []
std = [
    "serde?/std",
    "dep:ahash",
    "dep:kstring",
    "thiserror/std",
    "bincode?/std",
]
serde = [
    "dep:serde",
    "tinyvec/serde",
    "ahash?/serde",
    "kstring?/serde",
    "compact_str/serde",
]
bincode = ["dep:bincode", "serde"]
all = ["std", "serde", "bincode"]

[dependencies]
tap = "1.0"
serde = { version = "1.0", default-features = false, optional = true, features = [
    "alloc",
    "derive",
] }
tinyvec = { version = "1.9", default-features = false, features = [
    "alloc",
    "latest_stable_rust",
] }
ahash = { version = "0.8", optional = true }
nom = { version = "8.0", default-features = false, features = ["alloc"] }
compact_str = { version = "0.9", default-features = false }
thiserror = { version = "2.0", default-features = false }
bincode = { version = "2.0", optional = true, default-features = false, features = [
    "alloc",
    "serde",
] }
kstring = { version = "2.0", optional = true }

[package.metadata.docs.rs]
all-features = true
# targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "__unstable_doc"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(__unstable_doc)'] }

[dev-dependencies]
anyhow = "1.0"
serde_json = "1.0"
testutils = "0.0.1"
toml = "0.8"

[[example]]
name = "unread"
required-features = ["std", "serde"]

[[example]]
name = "toml"
required-features = ["std", "serde"]
